--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "compression": "1.7.0",
     "concurrently": "3.5.0",
     "express": "4.15.4",
-    "express-http-proxy": "1.0.6",
+    "express-http-proxy": "^1.6.3",
+    "http-proxy-middleware": "^2.0.3",
     "lodash": "4.17.4",
     "nodemon": "1.12.0",
     "npm-run-all": "4.1.1",
